# audio_dsp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Details.md  DevNotes.md  Makefile  README.md  rerun.sh
configuration/: root_directory.h.in
scripts/: audio_file_data.py  design_filters.py
src/: CMakeLists.txt  DevNotes.md
src/audio_player/: audio_player.cpp  audio_player_main.cpp
src/audio_player/lib/: alsa_player.cpp  alsa_player.h  alsa_player.hpp  audio_player.h  audio_player.hpp  audio_player_app.h  audio_player_app.hpp  console_manager.h  console_manager.hpp  filter.hpp  processing_thread.hpp  rt_queue.hpp  threadsafe_queue.h  threadsafe_queue.hpp
src/curses_console/: curses_console.cpp  curses_console.h  curses_console.hpp
src/dsp/: dsp_tools.hpp
src/examples/: first_example_w_q.cpp  kfr_reader_test.cpp  kfr_test.cpp  queue_test.cpp  simple_alsa_audio.cpp
src/examples/alsa_official/: pcm.c
